@@ -7,7 +7,6 @@ import de.eisi05.npc.api.objects.NPC;
 import de.eisi05.npc.api.objects.NpcOption;
 import de.eisi05.npc.api.pathfinding.AStarPathfinder;
 import de.eisi05.npc.api.pathfinding.Path;
-import de.eisi05.npc.api.pathfinding.PathfindingUtils;
 import de.eisi05.npc.api.scheduler.Tasks;
 import de.eisi05.npc.api.utils.SerializableConsumer;
 import de.eisi05.npc.api.wrapper.objects.WrappedEntity;
@@ -63,7 +62,7 @@ public class WalkToLocationGoal extends Goal
         super(Priority.MEDIUM);
         this.targetLocation = builder.targetLocation.clone();
         this.serializableLocation = new Path.SerializablePath.SerializableLocation(targetLocation);
-        this.speed = Math.max(0.1, Math.min(1.0, builder.speed));
+        this.speed = Math.clamp(builder.speed, 0.1, 1.0);
         this.maxIterations = builder.maxIterations;
         this.allowDiagonal = builder.allowDiagonal;
         this.completionCallback = builder.completionCallback;
@@ -103,7 +102,7 @@ public class WalkToLocationGoal extends Goal
      */
     public void setSpeed(double speed)
     {
-        this.speed = Math.max(0.1, Math.min(1.0, speed));
+        this.speed = Math.clamp(speed, 0.1, 1.0);
     }
 
     /**
@@ -540,7 +539,7 @@ public class WalkToLocationGoal extends Goal
          */
         public Builder speed(double speed)
         {
-            this.speed = Math.max(0.1, Math.min(1.0, speed));
+            this.speed = Math.clamp(speed, 0.1, 1.0);
             return this;
         }
 
